# ffi-switch-homebrew

./: Cargo.toml  LICENSE  README.md  build.rs  shell.nix  wrapper.h
.cargo/: config.toml
src/: cool.c  cool.h  main.rs
